# VaibhavKumarRajput_BridgeLabz

./: Day02_PythonStandardIOPractices.ipynb
Day1_Python_Practice/: Copy_of_Day01_PythonBestPractices_Notes.ipynb
OOPS_Practice/: Aggregation.py  Duck.py  Magic_Method.py  Nested_class.py  Polymorphism.py  Property.py  abstract.py  car.py  class_method.py  main.py  static_method.py  super.py
Practice_Set_1/: 10_Exam_Result.py  11_Number_Compression.py  12_Vowel_Frequency.py  13_Train_Ticket.py  14_Number_Pattern.py  15_Smart_Door.py  16_Water_Tank.py  17_Armstrong.py  18_Bus_Seat.py  19_Number_Mirror.py  1_ATM_Transaction.py  20_Digital_Lock.py  2_Smart_Eletricity.py  3_Passworsd.py  4_Traffic_SIgnal.py  6_Prime.py  7_Online_order_Disciunt.py  8_BinarytoDecimal.py  9_Mobile_Battery.py
Regex/: Regex.py  data.txt
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
one/: file.txt  file2.txt  file3.txt
three/: one.txt  readme.md
uvdemo/: pyproject.toml  requirement.txt
